package use_case.play_card_game;

/**
 * The Play Card Game Use Case.
 */

public interface PlayCardGameInputBoundary {
    /**
     * Execute the Play Card Game Use Case.
     */
    void execute();

}